# embedded-network

./: .gitignore  Makefile  README.md
buildroot/: Config.in  external.desc  external.mk
buildroot/board/embedded-network/raspberrypi4/: bmp280  kernel.config
buildroot/board/embedded-network/raspberrypi4/overlay/etc/init.d/: S51bmp280-server
buildroot/board/embedded-network/raspberrypi4/overlay/etc/network/: interfaces
buildroot/board/embedded-network/raspberrypi4/overlay/etc/ssh/: sshd_config
buildroot/configs/: raspberrypi4_custom_defconfig
buildroot/package/bmp280-server/: Config.in  bmp280-server.mk
docker/: Dockerfile
docker/scripts/: setup-build.sh
makefiles/: buildroot.mk  config.mk  utils.mk
modules/bmp280/: .gitignore  Makefile  Makefile.am  _Makefile  configure.ac
modules/bmp280/inc/: gpio_drv.h  i2c_drv.h
modules/bmp280/src/: bmp280.c  gpio_drv.c  i2c_drv.c  server.c  temperature.c
modules/tcp/: client.c  server.c
network/: interfaces
qt-gui/: .gitignore  qt-gui.pro
qt-gui/inc/: graphwidget.h  mainwidget.h  zmq_connection.h
qt-gui/src/: graphwidget.cc  main.cc  mainwidget.cc  zmq_connection.c
sensors/: .gitignore  Makefile
sensors/inc/: i2c_drv.h
sensors/src/: i2c_drv.c  main.c
tcp/: Makefile
utils/: brdock.sh
